--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,187 @@
-style.css 
+center {
+    text-align: -webkit-center;
+}
+@media (min-width: 280px) and (max-width: 600px)
+
+h1 {
+    font-size: 3em;
+    font-family: "Andale Mono, monospace";
+}
+h1 {
+    display: block;
+    font-size: 100%;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    font-family: "Andale Mono, monospace";
+}
+/*Titulo*/
+center {
+    display: block;
+    text-align: center;
+}
+header {
+    display: block;
+}
+h1 {
+    font-size: medium;
+    font-family: "Andale Mono, monospace";
+}
+
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+/*menu barra*/
+nav {
+    background-color: pink;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+nav ul li {
+    position: relative;
+}
+nav ul li a {
+    display: block;
+    color: black;
+    padding: 10px;
+    text-decoration: none;
+}
+nav ul li:hover > ul.submenu {
+    display: block;
+}
+nav ul li ul.submenu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+}
+nav ul li ul.submenu li {
+    position: relative;
+}
+nav ul li ul.submenu li a {
+    background-color: pink;
+    color: black;
+    padding: 10px;
+    text-decoration: none;
+    width: 100%;
+}
+nav ul li ul.submenu li:hover > ul {
+    display: block;
+}
+nav ul li ul.submenu ul {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+}
+nav ul li ul.submenu ul li a {
+    background-color: #555;
+}
+/*fin menu*/
+
+/* productos */
+*::after
+*::before
+*{ 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+
+#container-icon{
+    text-align: center;
+}
+
+body{
+
+    margin: 0 auto;
+    max-width: 1200px;
+    font-family: 'lato';
+    color: #333;
+}
+.icon-cart{
+    width: 40px;
+    height: 40px;
+}
+img{   
+    max-width: 100%;
+}
+header{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0 40px 0;
+}
+
+/*main*/
+.container-items{
+    display: grid;
+    grid-template-columns: (2,1fr);
+    gap: 50px
+}
+
+.item{
+    border-radius: 10px;
+}
+
+
+.info-product{
+    padding: 15px 30px;
+}
+
+.item img{
+    width: 350px;
+    height: 350px;
+    object-position: cover;
+    border-radius: 10px 10px 0 0;
+}
+
+.item figure{
+    overflow: hidden;
+}
+
+.item:hover img{
+    transform: scale(1.2);
+}
+/*Redes Sociales*/
+
+footer {
+    background-color: pink;
+    padding: 20px;
+    text-align: center;
+}
+
+.redes-sociales {
+    margin-top: 10px;
+}
+
+.redes-sociales a {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.redes-sociales img {
+    width: 30px;
+    height: 30px;
+}
